# obj2pbrt-v4

./: CMakeLists.txt  LICENSE  MainDialog.cpp  MainDialog.h  MainDialog.ui  README.md  main.cpp  obj2pbrt.cpp  obj2pbrt.h
pbrt/: scene.template.pbrt
